# dfdl

./: .gitignore  .nvim.lua  CMakeLists.txt  CONTRIBUTING.md  README.md
include/: config.hpp  sourceInfo.hpp
include/client/: client.hpp
include/client/internal/: clientConfigs.hpp  clientThreads.hpp  downloadFiles.hpp  peerRequests.hpp  requests.hpp  serverRequests.hpp
include/client/internal/internal/: attemptPeerRequest.hpp  attemptServerRequest.hpp  clientNetworking.hpp  downloadThread.hpp  peerDownloading.hpp  seedThread.hpp
include/client/internal/internal/internal/: clientNetworking.hpp  downloadHandshake.hpp  downloadThread.hpp
include/networking/: fileParsing.hpp  messageFormatting.hpp  socket.hpp
include/networking/internal/fileParsing/: fileUtil.hpp
include/networking/internal/messageFormatting/: byteOrdering.hpp  messageEncoding.hpp
include/networking/internal/sockets/: socketUtil.hpp
include/server/: server.hpp
include/server/internal/: db.hpp  serverStartup.hpp  serverThreads.hpp  syncing.hpp
include/server/internal/database/: db.hpp
include/server/internal/database/internal/: queries.hpp  tableInfo.hpp  types.hpp
include/server/internal/internal/: clientConnection.hpp  databaseQueries.hpp  databaseTableInfo.hpp  databaseTypes.hpp  electionThread.hpp  workerActions.hpp
src/: main.cpp
src/client/: client.cpp
src/client/internal/: clientConfigs.cpp  clientThreads.cpp  downloadFiles.cpp  peerRequests.cpp  requests.cpp  serverRequests.cpp
src/client/internal/internal/: attemptPeerRequest.cpp  attemptServerRequest.cpp  clientNetworking.cpp  downloadThread.cpp  peerDownloading.cpp  seedThread.cpp
src/client/internal/internal/internal/: clientNetworking.cpp  downloadHandshake.cpp  downloadThread.cpp
src/networking/: fileParsing.cpp  messageFormatting.cpp  socket.cpp
src/networking/internal/fileParsing/: fileUtil.cpp
src/networking/internal/messageFormatting/: byteOrdering.cpp
src/networking/internal/sockets/: socketUtil.cpp
src/server/: oldserver.cpp  server.cpp
src/server/internal/: db.cpp  serverStartup.cpp  serverThreads.cpp  syncing.cpp
src/server/internal/database/: db.cpp
src/server/internal/database/internal/: queries.cpp
src/server/internal/internal/: clientConnection.cpp  databaseQueries.cpp  electionThread.cpp  workerActions.cpp
